Fix for regression that prevented listboxes inside of inline containers from showing up. b=69785 r=kmcclusk sr=roc+moz